--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         #auth-screen, #profile-overlay, #reader-overlay, #full-lib-view, #borrow-view, #search-results-overlay { position: fixed; inset: 0; z-index: 9000; background: var(--bg); display: flex; flex-direction: column; padding: 20px; overflow-y: auto; }
         .hidden { display: none !important; }
         .cat-item { cursor: pointer; background: #0f172a; padding: 12px; border-radius: 12px; border: 1px solid var(--border); margin-bottom: 8px; font-size: 13px; }
-        
         .time-header { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 15px; }
         .time-box { background: var(--card-bg); border: 1px solid var(--border); padding: 10px; border-radius: 15px; text-align: center; }
         .time-label { font-size: 8px; color: var(--text-sub); display: block; text-transform: uppercase; }
@@ -39,14 +38,14 @@
             <input type="text" id="login-coll-id" class="login-field" placeholder="College ID">
             <input type="text" id="login-user-id" class="login-field" placeholder="User ID">
             <input type="password" id="login-pass" class="login-field" placeholder="Password">
-            <button onclick="handleLogin()" style="background:var(--blue); color:white; border:none; width:100%; padding:15px; border-radius:12px; font-weight:600;">Enter Library</button>
+            <button onclick="handleLogin()" style="background:var(--blue); color:white; border:none; width:100%; padding:15px; border-radius:12px; font-weight:600;">Enter</button>
         </div>
     </div>
 
     <div id="dashboard" class="hidden">
         <div class="time-header">
-            <div id="session-box" class="time-box" style="border-color: var(--green);"><span class="time-label"><span class="status-dot"></span>Session Duration</span><span id="session-clock" class="time-val" style="color: var(--green);">00:00:00</span></div>
-            <div class="time-box"><span class="time-label">Current Time</span><span id="real-time-clock" class="time-val" style="color: var(--blue);">00:00:00</span></div>
+            <div id="session-box" class="time-box" style="border-color: var(--green);"><span class="time-label"><span class="status-dot"></span>Session</span><span id="session-clock" class="time-val" style="color: var(--green);">00:00:00</span></div>
+            <div class="time-box"><span class="time-label">Current</span><span id="real-time-clock" class="time-val" style="color: var(--blue);">00:00:00</span></div>
         </div>
 
         <div style="display:grid; grid-template-columns: repeat(3, 1fr); gap:10px; margin-bottom:20px;">
@@ -55,24 +54,19 @@
             <div class="stat-card" style="background:var(--purple)" onclick="toggleProfile()"><h4>Profile</h4><p id="mini-initial">U</p></div>
         </div>
 
-        <div class="search-container" style="position: relative; margin: 10px 0 20px 0;">
-            <input type="text" id="lib-search" class="login-field" placeholder="🔍 Search book title or category..." oninput="showSuggestions(this.value)" onkeydown="if(event.key==='Enter') triggerSearch()">
-            <div id="search-suggestions" class="hidden" style="position:absolute; top:48px; width:100%; background:var(--card-bg); border:1px solid var(--border); border-radius:10px; z-index:10000; max-height:200px; overflow-y:auto;"></div>
-        </div>
-
         <div style="display:grid; grid-template-columns: 2fr 1.2fr; gap: 15px;">
             <div>
                 <div class="glass-card"><h3 style="color:var(--green); margin-top:0;">🌍 Mission Focus</h3><div id="mission-list"></div></div>
-                <div class="glass-card"><h3>🕒 Recent Resources</h3><div id="recent-list"></div></div>
+                <div class="glass-card"><h3>🕒 Recent</h3><div id="recent-list"></div></div>
             </div>
             <div>
                 <div class="glass-card"><h3>📂 Categories</h3>
-                    <div class="cat-item" onclick="loadCat('Theology')">📖 Systematic Theology</div>
-                    <div class="cat-item" onclick="loadCat('Church History')">⛪ CHURCH History</div>
+                    <div class="cat-item" onclick="loadCat('Theology')">📖 Theology</div>
+                    <div class="cat-item" onclick="loadCat('Church History')">⛪ History</div>
                     <div class="cat-item" onclick="loadCat('Mission')">🌍 Mission</div>
-                    <div class="cat-item" onclick="loadCat('Bible Intro')">📘 Intro to BIBLE</div>
-                    <div class="cat-item" onclick="loadCat('Acts')">📜 Acts of Apostles</div>
-                    <div class="cat-item" onclick="loadCat('Other Books')">📚 Other Books</div>
+                    <div class="cat-item" onclick="loadCat('Bible Intro')">📘 Bible</div>
+                    <div class="cat-item" onclick="loadCat('Acts')">📜 Acts</div>
+                    <div class="cat-item" onclick="loadCat('Other Books')">📚 Others</div>
                 </div>
             </div>
         </div>
@@ -80,124 +74,92 @@
 
     <div id="reader-overlay" class="hidden">
         <div style="background:#1e293b; padding:15px; display:flex; justify-content:space-between; align-items:center; color:white;"><span id="reader-title">Reader</span><button onclick="closeReader()" style="background:red; border:none; color:white; padding:8px 15px; border-radius:8px;">Exit</button></div>
-        <iframe id="pdf-frame" style="width:100%; height:100%; border:none;"></iframe>
+        <div style="display:flex; height:calc(100vh - 60px);">
+            <iframe id="pdf-frame" style="flex:3; height:100%; border:none;"></iframe>
+            <div style="flex:1; background:var(--card-bg); border-left:1px solid var(--border); padding:15px; overflow-y:auto;">
+                <h4 style="margin-top:0;">📂 Quick Nav</h4>
+                <div class="cat-item" onclick="closeReader(); showFullLibrary()">Back to Library</div>
+                <div class="cat-item" onclick="closeReader(); showBorrowView()">My Borrowed</div>
+                <hr style="border-color:var(--border)">
+                <p style="font-size:10px; color:var(--text-sub)">Tracking: Active</p>
+            </div>
+        </div>
     </div>
+
+    <div id="profile-overlay" class="hidden">
+        <div class="glass-card" style="max-width:350px; margin:auto; text-align:center;">
+            <h2 id="prof-name">Name</h2><button onclick="toggleProfile()" class="btn-preview">Back</button><button onclick="location.reload()" style="background:red; width:100%; margin-top:10px;" class="btn-preview">Logout</button>
+        </div>
+    </div>
+    <div id="full-lib-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📚 Library</h3><button onclick="closeView('full-lib-view')" class="btn-preview">Back</button></div><div id="full-book-list"></div></div>
+    <div id="borrow-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📥 Borrowed</h3><button onclick="closeView('borrow-view')" class="btn-preview">Back</button></div><div id="borrow-list"></div></div>
 
     <script>
         const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
         firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
-        
-        let currentUser = null; 
-        let collegeBooks = []; 
-        let sessionSeconds = 0;
-        let isActive = true;
-        let currentActivityType = "Active Session"; 
-        let currentBookTitle = "";
+        let currentUser = null; let collegeBooks = []; let sessionSeconds = 0; let isActive = true;
+        let curAct = "Active Session"; let curBook = "";
 
-        // --- PAUSE LOGIC ---
         document.addEventListener("visibilitychange", () => {
-            if (document.hidden) {
-                isActive = false;
-                document.getElementById('session-box').classList.add('paused');
-            } else {
-                isActive = true;
-                document.getElementById('session-box').classList.remove('paused');
-            }
+            isActive = !document.hidden;
+            document.getElementById('session-box').classList.toggle('paused', !isActive);
         });
 
         async function handleLogin() {
-            const cid = document.getElementById('login-coll-id').value.trim();
-            const uid = document.getElementById('login-user-id').value.trim();
-            const pass = document.getElementById('login-pass').value.trim();
+            const cid = document.getElementById('login-coll-id').value.trim(); const uid = document.getElementById('login-user-id').value.trim(); const pass = document.getElementById('login-pass').value.trim();
             const snap = await db.collection("users").where("collegeId","==",cid).where("studentId","==",uid).where("password","==",pass).get();
             if(!snap.empty) {
                 currentUser = { uid: snap.docs[0].id, ...snap.docs[0].data() };
-                document.getElementById('auth-screen').classList.add('hidden');
-                document.getElementById('dashboard').classList.remove('hidden');
-                initSystem();
-            } else { alert("Login Failed"); }
+                document.getElementById('auth-screen').classList.add('hidden'); document.getElementById('dashboard').classList.remove('hidden');
+                init();
+            } else { alert("Error"); }
         }
 
-        function initSystem() {
-            // Visual Clocks
-            setInterval(() => { if(isActive) { sessionSeconds++; updateClock('session-clock', sessionSeconds); } }, 1000);
+        function init() {
+            setInterval(() => { if(isActive) { sessionSeconds++; updClock('session-clock', sessionSeconds); } }, 1000);
             setInterval(() => { document.getElementById('real-time-clock').innerText = new Date().toLocaleTimeString([], {hour12: false}); }, 1000);
-
-            // Attendance Data Collection (Every 60s)
             setInterval(async () => {
-                if (currentUser && isActive) {
+                if(currentUser && isActive) {
                     const dur = 60;
-                    // Logic: If currentActivityType is "Full Reading", it counts towards Borrowed Reading
-                    await db.collection("activity_logs").add({
-                        userId: currentUser.uid,
-                        activityType: currentActivityType + (currentBookTitle ? ": " + currentBookTitle : ""),
-                        duration: dur,
-                        timestamp: Date.now()
-                    });
-                    // Global Update
-                    await db.collection("users").doc(currentUser.uid).update({
-                        usageTime: firebase.firestore.FieldValue.increment(dur)
-                    });
+                    await db.collection("activity_logs").add({ userId: currentUser.uid, activityType: curAct + (curBook ? ": " + curBook : ""), duration: dur, timestamp: Date.now() });
+                    await db.collection("users").doc(currentUser.uid).update({ usageTime: firebase.firestore.FieldValue.increment(dur) });
                 }
             }, 60000);
-
-            loadLib();
-            listenBorrows();
+            load(); listen();
         }
 
-        function updateClock(id, s) {
-            const h = Math.floor(s/3600).toString().padStart(2,'0');
-            const m = Math.floor((s%3600)/60).toString().padStart(2,'0');
-            const sec = (s%60).toString().padStart(2,'0');
-            document.getElementById(id).innerText = `${h}:${m}:${sec}`;
-        }
+        function updClock(id, s) { const h = Math.floor(s/3600).toString().padStart(2,'0'); const m = Math.floor((s%3600)/60).toString().padStart(2,'0'); const sec = (s%60).toString().padStart(2,'0'); document.getElementById(id).innerText = `${h}:${m}:${sec}`; }
 
-        function openPdf(id, title) { 
-            currentActivityType = "Online Reading";
-            currentBookTitle = title;
-            document.getElementById('reader-title').innerText = title;
-            document.getElementById('pdf-frame').src = `https://docs.google.com/viewer?url=${window.location.origin}/public/${id}_read_online.pdf&embedded=true`;
-            document.getElementById('reader-overlay').classList.remove('hidden'); 
-        }
-
-        function openBorrowedPdf(id, title) {
-            currentActivityType = "Full Reading"; // CRITICAL: This label triggers "Borrowed" calculation in Admin
-            currentBookTitle = title;
-            document.getElementById('reader-title').innerText = title;
-            document.getElementById('pdf-frame').src = `https://docs.google.com/viewer?url=${window.location.origin}/public/${id}.pdf&embedded=true`;
-            document.getElementById('reader-overlay').classList.remove('hidden');
-        }
-
-        function closeReader() { 
-            document.getElementById('reader-overlay').classList.add('hidden'); 
-            document.getElementById('pdf-frame').src = ""; 
-            currentActivityType = "Active Session";
-            currentBookTitle = "";
-        }
-
-        // Standard UI functions...
-        function loadLib() {
+        function load() {
             db.collection("library_settings").where("allowedColleges","array-contains",currentUser.collegeId).onSnapshot(snap => {
-                const recent = document.getElementById('recent-list');
-                recent.innerHTML = "";
+                const rec = document.getElementById('recent-list'); const mis = document.getElementById('mission-list'); const ful = document.getElementById('full-book-list');
+                rec.innerHTML = ""; mis.innerHTML = ""; ful.innerHTML = ""; collegeBooks = [];
                 snap.forEach(doc => {
-                    const b = doc.data();
-                    recent.innerHTML += `<div class="book-item"><b>${b.title}</b><div style="display:flex; gap:5px;"><button class="btn-preview" onclick="openPdf('${doc.id}', '${b.title}')">Preview</button></div></div>`;
+                    const b = doc.data(); collegeBooks.push({id: doc.id, ...b});
+                    const html = `<div class="book-item"><b>${b.title}</b><div style="display:flex; gap:5px;"><button class="btn-preview" onclick="openPdf('${doc.id}', '${b.title}')">Preview</button><button class="btn-preview" style="background:#475569" onclick="borrow('${doc.id}','${b.title}')">Borrow</button></div></div>`;
+                    rec.innerHTML += html; ful.innerHTML += html; if(b.mission) mis.innerHTML += html;
                 });
                 document.getElementById('top-total').innerText = snap.size;
             });
         }
-        function listenBorrows() {
+
+        function listen() {
             db.collection("borrows").where("userId","==",currentUser.uid).onSnapshot(snap => {
-                const list = document.getElementById('borrow-list');
-                list.innerHTML = "";
-                snap.forEach(doc => {
-                    const d = doc.data();
-                    list.innerHTML += `<div class="book-item"><b>${d.title}</b><button class="btn-preview" onclick="openBorrowedPdf('${d.bookId}','${d.title}')">Open Full Book</button></div>`;
-                });
+                const list = document.getElementById('borrow-list'); list.innerHTML = "";
+                snap.forEach(doc => { const d = doc.data(); list.innerHTML += `<div class="book-item"><b>${d.title}</b><button class="btn-preview" onclick="openBorrowedPdf('${d.bookId}','${d.title}')">Open Full</button></div>`; });
                 document.getElementById('top-issued').innerText = snap.size;
             });
         }
+
+        function openPdf(id, title) { curAct = "Online Reading"; curBook = title; document.getElementById('reader-title').innerText = title; document.getElementById('pdf-frame').src = `https://docs.google.com/viewer?url=${window.location.origin}/public/${id}_read_online.pdf&embedded=true`; document.getElementById('reader-overlay').classList.remove('hidden'); }
+        function openBorrowedPdf(id, title) { curAct = "Full Reading"; curBook = title; document.getElementById('reader-title').innerText = title; document.getElementById('pdf-frame').src = `https://docs.google.com/viewer?url=${window.location.origin}/public/${id}.pdf&embedded=true`; document.getElementById('reader-overlay').classList.remove('hidden'); }
+        function closeReader() { document.getElementById('reader-overlay').classList.add('hidden'); document.getElementById('pdf-frame').src = ""; curAct = "Active Session"; curBook = ""; }
+        function loadCat(cat) { const list = document.getElementById('full-book-list'); list.innerHTML = ""; collegeBooks.filter(b => b.category === cat).forEach(b => { list.innerHTML += `<div class="book-item"><b>${b.title}</b><button class="btn-preview" onclick="openPdf('${b.id}','${b.title}')">Preview</button></div>`; }); showFullLibrary(); }
+        async function borrow(id, t) { if(prompt("Code:") === "BORROW2026") await db.collection("borrows").add({ userId: currentUser.uid, bookId: id, title: t, borrowedAt: new Date().toISOString() }); }
+        function toggleProfile() { document.getElementById('prof-name').innerText = currentUser.fullName; document.getElementById('profile-overlay').classList.toggle('hidden'); }
+        function showFullLibrary() { document.getElementById('full-lib-view').classList.remove('hidden'); }
+        function showBorrowView() { document.getElementById('borrow-view').classList.remove('hidden'); }
+        function closeView(id) { document.getElementById(id).classList.add('hidden'); }
     </script>
 </body>
 </html>
