--- a/admin.html
+++ b/admin.html
@@ -11,64 +11,59 @@
     <style>
         :root { --blue: #3b82f6; --orange: #f97316; --green: #10b981; --purple: #a855f7; --bg: #0b1120; --card-bg: #1e293b; --text-main: #f8fafc; --text-sub: #94a3b8; --border: #334155; }
         body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 20px; color: var(--text-main); }
-        #auth-overlay { position: fixed; inset: 0; background: var(--bg); z-index: 5000; display: flex; align-items: center; justify-content: center; }
-        .login-card { background: var(--card-bg); padding: 30px; border-radius: 24px; width: 100%; max-width: 350px; text-align: center; border: 1px solid var(--border); }
-        .login-field, select { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 15px; outline: none; box-sizing: border-box; font-family: inherit; }
-        .nav-tabs { display: flex; gap: 10px; margin-bottom: 25px; overflow-x: auto; padding-bottom: 10px; }
-        .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: var(--card-bg); color: var(--text-sub); border: 1px solid var(--border); transition: 0.3s; white-space: nowrap; }
-        .tab-btn.active { background: var(--blue); color: white; border-color: var(--blue); }
+        .nav-tabs { display: flex; gap: 10px; margin-bottom: 25px; }
+        .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; background: var(--card-bg); color: var(--text-sub); border: 1px solid var(--border); }
+        .tab-btn.active { background: var(--blue); color: white; }
         .glass-card { background: var(--card-bg); border-radius: 20px; padding: 25px; border: 1px solid var(--border); margin-bottom: 20px; }
         table { width: 100%; border-collapse: collapse; }
-        th { text-align: left; padding: 12px; color: var(--text-sub); font-size: 11px; text-transform: uppercase; border-bottom: 1px solid var(--border); }
         td { padding: 15px 12px; border-bottom: 1px solid var(--border); font-size: 13px; }
-        .btn-sm { padding: 8px 15px; border-radius: 8px; border: none; font-size: 11px; cursor: pointer; font-weight: 600; }
-        .dropdown-menu { display: none; position: absolute; background: var(--card-bg); border: 1px solid var(--border); border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.5); z-index: 100; min-width: 180px; padding: 10px; top: 40px; }
+        .btn-sm { padding: 8px 15px; border-radius: 8px; border: none; font-size: 11px; cursor: pointer; }
+        .dropdown-menu { display: none; position: absolute; background: var(--card-bg); border: 1px solid var(--border); z-index: 100; min-width: 150px; }
         .show { display: block; }
-        .dropdown-item { padding: 8px 12px; cursor: pointer; border-radius: 6px; font-size: 12px; color: var(--text-main); }
-        .dropdown-item:hover { background: var(--blue); }
-        .user-folder { background: #0f172a; padding: 15px; border-radius: 12px; margin-bottom: 10px; cursor: pointer; border: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; }
-        .stat-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 20px; }
-        .stat-box { background: #0f172a; padding: 15px; border-radius: 12px; text-align: center; border: 1px solid var(--border); }
+        #user-modal { position: fixed; inset: 0; background: rgba(0,0,0,0.85); z-index: 6000; display: flex; align-items: center; justify-content: center; }
+        .modal-content { background: var(--card-bg); width: 600px; border-radius: 24px; padding: 30px; max-height: 80vh; overflow-y: auto; }
         .hidden { display: none !important; }
+        .stat-box { background: #0f172a; padding: 10px; border-radius: 12px; text-align: center; border: 1px solid var(--border); font-size: 11px; }
     </style>
 </head>
 <body>
-    <div id="auth-overlay"><div class="login-card"><h2>Admin Login</h2><input type="text" id="admin-coll-id" class="login-field" placeholder="College ID"><input type="password" id="admin-pass" class="login-field" placeholder="Password"><button class="btn-sm" style="background:var(--blue); color:white; width:100%; padding:15px; border-radius:12px;" onclick="handleAdminLogin()">Login</button></div></div>
-    
+    <div id="auth-overlay" style="position:fixed; inset:0; background:var(--bg); z-index:9999; display:flex; align-items:center; justify-content:center;">
+        <div style="background:var(--card-bg); padding:30px; border-radius:20px; text-align:center;">
+            <h2>Admin Login</h2>
+            <input type="text" id="admin-coll-id" class="login-field" placeholder="College ID" style="display:block; width:200px; margin-bottom:10px; padding:10px;">
+            <input type="password" id="admin-pass" class="login-field" placeholder="Password" style="display:block; width:200px; margin-bottom:10px; padding:10px;">
+            <button onclick="handleAdminLogin()" class="btn-sm" style="background:var(--blue); color:white; width:100%;">Login</button>
+        </div>
+    </div>
+
     <div id="master-panel" class="hidden">
         <div class="nav-tabs">
             <button id="t-inv" class="tab-btn active" onclick="switchTab('inv')">Inventory</button>
-            <button id="t-nom" class="tab-btn" onclick="switchTab('nom')">Nominations</button>
             <button id="t-mem" class="tab-btn" onclick="switchTab('mem')">Monitoring</button>
-            <button id="t-stud" class="tab-btn" onclick="switchTab('stud')">Members</button>
             <button class="tab-btn" style="background:#ef4444; color:white; margin-left:auto;" onclick="location.reload()">Logout</button>
         </div>
 
         <div id="inv-section" class="glass-card">
-            <table><thead><tr><th>Resource</th><th>Access</th><th>Category</th><th>Promo</th><th>Delete</th></tr></thead><tbody id="inventory-list"></tbody></table>
+            <table><thead><tr><th>Resource</th><th>Access</th><th>Promo</th><th>Delete</th></tr></thead><tbody id="inventory-list"></tbody></table>
         </div>
-
-        <div id="nom-section" class="hidden glass-card"><h2>📥 Faculty Nominations</h2><div id="nomination-list"></div></div>
 
         <div id="mem-section" class="hidden glass-card">
-            <select id="mon-coll" onchange="loadCollegeStudents(this.value)" class="login-field" style="max-width:250px;"><option value="">Select College</option><option value="IMC26">IMC26</option><option value="ASLIN26">ASLIN26</option></select>
-            <div id="user-folders-list"></div>
+            <select id="mon-coll" onchange="loadCollegeStudents(this.value)" style="padding:10px; border-radius:8px;"><option value="">Select College</option><option value="IMC26">IMC26</option><option value="ASLIN26">ASLIN26</option></select>
+            <div id="user-folders-list" style="margin-top:20px;"></div>
         </div>
-
-        <div id="stud-section" class="hidden glass-card"><h2>📤 Bulk Registration</h2><textarea id="bulk-input" class="login-field" style="height:100px;" placeholder="Name, CollID, ID, Pass, Role"></textarea><button class="btn-sm" style="background:var(--blue); color:white; width:100%;" onclick="processBulk()">Bulk Upload</button></div>
     </div>
 
     <div id="user-modal" class="hidden">
         <div class="modal-content">
-            <div style="display:flex; justify-content:space-between; align-items:center;">
-                <h3 id="modal-title">Attendance</h3>
-                <div style="display:flex; gap:10px;">
+            <div style="display:flex; justify-content:space-between;">
+                <h3 id="modal-title">Student Log</h3>
+                <div>
                     <button onclick="fetchUsageData()" class="btn-sm" style="background:var(--orange); color:white;">🔄 Force Sync</button>
-                    <button onclick="downloadCSV()" class="btn-sm" style="background:var(--blue); color:white;">📥 CSV</button>
+                    <button onclick="downloadDetailedCSV()" class="btn-sm" style="background:var(--blue); color:white;">📥 Detailed CSV</button>
                     <button onclick="closeModal()" class="btn-sm" style="background:#ef4444; color:white;">X</button>
                 </div>
             </div>
-            <div id="modal-stats" style="margin-top:20px;"></div>
+            <div id="modal-stats" style="display:grid; grid-template-columns: repeat(3, 1fr); gap:10px; margin-top:20px;"></div>
             <table style="margin-top:20px;"><thead><tr><th>Time</th><th>Activity</th><th>Dur</th></tr></thead><tbody id="log-body"></tbody></table>
         </div>
     </div>
@@ -77,70 +72,65 @@
     const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
     firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
     const adminAccounts = { "aslin": "Phlagon@28", "IMC26": "IMC26@theo" };
-    let activeUID = "";
+    let activeUID = ""; let activeName = "";
 
     function handleAdminLogin() {
         const cid = document.getElementById('admin-coll-id').value.trim(); const pass = document.getElementById('admin-pass').value.trim();
-        if (adminAccounts[cid] && adminAccounts[cid] === pass) { document.getElementById('auth-overlay').classList.add('hidden'); document.getElementById('master-panel').classList.remove('hidden'); initAdmin(); } else { alert("Login Denied"); }
+        if (adminAccounts[cid] === pass) { document.getElementById('auth-overlay').classList.add('hidden'); document.getElementById('master-panel').classList.remove('hidden'); initAdmin(); } else { alert("Denied"); }
     }
 
     function initAdmin() {
         db.collection("library_settings").onSnapshot(snap => {
             const list = document.getElementById('inventory-list'); list.innerHTML = "";
             snap.forEach(doc => {
-                const b = doc.data(); const id = doc.id; const allowed = b.allowedColleges || [];
-                list.innerHTML += `<tr>
-                    <td><b>${b.title}</b></td>
-                    <td style="position:relative;"><button class="btn-sm" style="background:var(--purple); color:white;" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">${Object.keys(adminAccounts).filter(c=>c!=='aslin').map(c => `<div class="dropdown-item" onclick="toggleAccess('${id}','${c}',${allowed.includes(c)})">${c} ${allowed.includes(c)?'✅':''}</div>`).join('')}</div></td>
-                    <td style="position:relative;"><button class="btn-sm" style="background:var(--green); color:white;" onclick="toggleM('c-${id}')">Cat</button><div id="c-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updF('${id}','category','Theology')">Theology</div><div class="dropdown-item" onclick="updF('${id}','category','Church History')">History</div></div></td>
-                    <td style="position:relative;"><button class="btn-sm" style="background:var(--orange); color:white;" onclick="toggleM('p-${id}')">Promo</button><div id="p-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updF('${id}','recent',${!b.recent})">Recent: ${b.recent?'✅':''}</div><div class="dropdown-item" onclick="updF('${id}','trending',${!b.trending})">Trend: ${b.trending?'✅':'OFF'}</div><div class="dropdown-item" onclick="updF('${id}','mission',${!b.mission})">Mission: ${b.mission?'✅':'OFF'}</div></div></td>
-                    <td><button class="btn-sm" style="background:#ef4444; color:white;" onclick="deletePDF('${id}')">🗑️</button></td>
-                </tr>`;
+                const b = doc.data(); const id = doc.id;
+                list.innerHTML += `<tr><td><b>${b.title}</b></td><td style="position:relative;"><button class="btn-sm" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">...</div></td><td style="position:relative;"><button class="btn-sm" onclick="toggleM('p-${id}')">Promo</button></td><td><button onclick="deletePDF('${id}')">🗑️</button></td></tr>`;
             });
         });
-        db.collection("faculty_nominations").where("status","==","pending").onSnapshot(snap => {
-            const list = document.getElementById('nomination-list'); if(list) { list.innerHTML = ""; snap.forEach(doc => { const n = doc.data(); list.innerHTML += `<div class="user-folder"><span><b>${n.bookTitle}</b> (${n.facultyName})</span><button class="btn-sm" style="background:var(--green); color:white;" onclick="approveNom('${doc.id}','${n.bookId}','${n.collegeId}','${n.facultyName}')">Approve</button></div>`; }); }
-        });
     }
-
-    async function updF(id, f, v) { await db.collection("library_settings").doc(id).update({ [f]: v }); }
-    function toggleM(id) { document.querySelectorAll('.dropdown-menu').forEach(m => m.id !== id ? m.classList.remove('show') : null); document.getElementById(id).classList.toggle('show'); }
-    function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === 't-'+t)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== t+'-section')); }
-    function fmt(s) { const h = Math.floor(s/3600).toString().padStart(2,'0'); const m = Math.floor((s%3600)/60).toString().padStart(2,'0'); const sec = (s%60).toString().padStart(2,'0'); return `${h}:${m}:${sec}`; }
 
     function loadCollegeStudents(cid) { 
         db.collection("users").where("collegeId", "==", cid).onSnapshot(snap => { 
             const list = document.getElementById('user-folders-list'); list.innerHTML = ""; 
-            snap.forEach(doc => { const u = doc.data(); list.innerHTML += `<div class="user-folder" onclick='openReport("${doc.id}", ${JSON.stringify(u)})'><span>📂 <b>${u.fullName}</b></span><small>${u.studentId}</small></div>`; }); 
+            snap.forEach(doc => { const u = doc.data(); list.innerHTML += `<div style="padding:10px; background:#0f172a; margin-bottom:5px; cursor:pointer;" onclick='openReport("${doc.id}", "${u.fullName}")'>📂 ${u.fullName}</div>`; }); 
         }); 
     }
 
-    async function openReport(uid, user) { activeUID = uid; document.getElementById('user-modal').classList.remove('hidden'); document.getElementById('modal-title').innerText = user.fullName; fetchUsageData(); }
+    function fmt(s) { const h = Math.floor(s/3600).toString().padStart(2,'0'); const m = Math.floor((s%3600)/60).toString().padStart(2,'0'); const sec = (s%60).toString().padStart(2,'0'); return `${h}:${m}:${sec}`; }
+
+    async function openReport(uid, name) { activeUID = uid; activeName = name; document.getElementById('user-modal').classList.remove('hidden'); document.getElementById('modal-title').innerText = name; fetchUsageData(); }
 
     async function fetchUsageData() {
-        document.getElementById('log-body').innerHTML = "<tr><td colspan='3'>Pulling Fresh Server Logs...</td></tr>";
+        document.getElementById('log-body').innerHTML = "<tr><td colspan='3'>Syncing...</td></tr>";
         const logs = await db.collection("activity_logs").where("userId", "==", activeUID).orderBy("timestamp", "desc").limit(100).get({ source: 'server' });
-        let total = 0; let borrow = 0; let html = "";
+        let total = 0; let online = 0; let borrowed = 0; let html = "";
         logs.forEach(l => { 
-            const d = l.data(); const d_dur = parseInt(d.duration) || 0; total += d_dur; 
-            if(d.activityType.includes("Full Reading")) borrow += d_dur;
-            html += `<tr><td>${new Date(d.timestamp).toLocaleString()}</td><td>${d.activityType}</td><td>${fmt(d_dur)}</td></tr>`;
+            const d = l.data(); const dur = d.duration || 0; total += dur;
+            if(d.activityType.includes("Online")) online += dur;
+            if(d.activityType.includes("Full")) borrowed += dur;
+            html += `<tr><td>${new Date(d.timestamp).toLocaleString()}</td><td>${d.activityType}</td><td>${fmt(dur)}</td></tr>`;
         });
-        document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box"><span>TOTAL</span><br><b>${fmt(total)}</b></div><div class="stat-box"><span>BORROWED</span><br><b>${fmt(borrow)}</b></div></div>`;
+        document.getElementById('modal-stats').innerHTML = `<div class="stat-box">Total Usage<br><b>${fmt(total)}</b></div><div class="stat-box">Online Read<br><b>${fmt(online)}</b></div><div class="stat-box">Full Read<br><b>${fmt(borrowed)}</b></div>`;
         document.getElementById('log-body').innerHTML = html;
     }
 
-    async function downloadCSV() {
+    async function downloadDetailedCSV() {
         const snap = await db.collection("activity_logs").where("userId", "==", activeUID).orderBy("timestamp", "desc").get();
-        let rows = "Date,Activity,Duration\n"; snap.forEach(l => { const d = l.data(); rows += `${new Date(d.timestamp).toLocaleString()},"${d.activityType}",${fmt(d.duration || 0)}\n`; });
-        const blob = new Blob([rows], { type: 'text/csv' }); const a = document.createElement('a'); a.href = URL.createObjectURL(blob); a.download = `Report.csv`; a.click();
+        let t = 0, o = 0, b = 0, rows = "Date,Activity,Duration\n";
+        snap.forEach(l => { 
+            const d = l.data(); const dur = d.duration || 0; t += dur;
+            if(d.activityType.includes("Online")) o += dur;
+            if(d.activityType.includes("Full")) b += dur;
+            rows += `${new Date(d.timestamp).toLocaleString()},"${d.activityType}",${fmt(dur)}\n`;
+        });
+        let csv = `Detailed Attendance Report: ${activeName}\nTotal Usage,${fmt(t)}\nTotal Online Reading,${fmt(o)}\nTotal Borrowed Reading,${fmt(b)}\n\n${rows}`;
+        const blob = new Blob([csv], { type: 'text/csv' });
+        const a = document.createElement('a'); a.href = URL.createObjectURL(blob); a.download = `${activeName}_Detailed_Report.csv`; a.click();
     }
 
-    function closeModal() { document.getElementById('user-modal').classList.add('hidden'); activeUID = ""; }
-    async function toggleAccess(id, coll, has) { const ref = db.collection("library_settings").doc(id); const doc = await ref.get(); let allowed = doc.data().allowedColleges || []; allowed = has ? allowed.filter(c => c !== coll) : [...allowed, coll]; await ref.update({ allowedColleges: allowed }); }
-    async function deletePDF(id) { if(confirm("Delete?")) await db.collection("library_settings").doc(id).delete(); }
-    async function approveNom(docId, bId, cid, fName) { await db.collection("library_settings").doc(bId).set({ recommendations: { [cid]: fName } }, { merge: true }); await db.collection("faculty_nominations").doc(docId).delete(); alert("Approved"); }
-    async function processBulk() { const lines = document.getElementById('bulk-input').value.split('\n'); for(let l of lines) { const p = l.split(',').map(i=>i.trim()); if(p.length===5) await db.collection("users").add({ fullName:p[0], collegeId:p[1], studentId:p[2], password:p[3], role:p[4].toLowerCase(), createdAt: new Date().toISOString(), usageTime: 0 }); } alert("Success"); }
+    function closeModal() { document.getElementById('user-modal').classList.add('hidden'); }
+    function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === 't-'+t)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== t+'-section')); }
+    function toggleM(id) { document.getElementById(id).classList.toggle('show'); }
 </script>
 </body>
 </html>
